Quick fix to KSS badge alignment.

--- a/styleguide/assets/kss.css
+++ b/styleguide/assets/kss.css
@@ -198,7 +198,7 @@ header[role="banner"].-styleguide {
   text-shadow: none;
   border-radius: 2px;
   padding: 3px 10px;
-  margin: 5px 18px;
+  margin: 0 18px;
 }
 
 .intro-neue {
